# swift-omnikit

./: .dockerignore  .geminiignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.agent  Dockerfile.ghostty  Dockerfile.kitchensink-runtime  Package.resolved  Package.swift  README.md  SWIFTUI_API_LIST.md  UNIFIED_LLM_SPEC_CHECKLIST.md  docker-compose.agent.yml  docker-compose.yml  parity_sources.lock.json  skills-lock.json
DropIn/: Package.swift
doc/: ghostty-control.md
docs/: adwaita-completion-audit.md  adwaita-renderer-support.md  agent-fabric-architecture.md  omniacp.md  omniskills.md  swiftbash-backend.md  swiftui-non-renderer-parity.json  swiftui-non-renderer-parity.md  swiftui-non-renderer-symbol-diff.json  swiftui-non-renderer-symbol-diff.md  the-agent-runtime-runbook.md
harbor_agent/: __init__.py  agent.py  pyproject.toml
harbor_agent/templates/: install.sh.j2
sampleDOTs/: cedar_spec_port.dot  consensus_task.dot  consensus_task_parity.dot  fix_sheets.dot  igopher_parity.dot  igopher_showcase.dot  kitchensink_parity.dot  megaplan.dot  megaplan_quality.dot  semport.dot  semport_thematic.dot  sprint_exec.dot  stubs_cleanup.dot  swiftui_parity_design.dot  swiftui_parity_final.dot  swiftui_parity_full.dot  vulnerability_analyzer.dot
scripts/: apply_blink_patches.sh  ghostty-igopher-run.sh  ghostty-kitchensink-run.sh  ghostty-lab-control.sh  ghostty-lab-entrypoint.sh  ghostty-lab.sh  run-adwaita-huge-smoke.sh  run-agent-stack.sh  run-kitchensink-adwaita-app.sh  run-omniui-adwaita-smoke-app.sh  run-omniui-adwaita-swiftui-smoke-app.sh  (+9 more)
(+894 files in other folders)
